--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,25 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books & Authors</title>
-
-    <!-- Css de Bootstrap -->
+    <link rel="icon" href="data:," type="image/x-icon">
+    {{!-- Css de Bootstrap --}}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- Estilos personalizados -->
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    {{!-- Estilos personalizados --}}
+    {{!-- <link rel="stylesheet" type="text/css" href="/css/styles.css"> --}}
 
-    <!-- Google Fonts: Lato -->
+    {{!-- Google Fonts: Lato --}}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
 
-    <!-- Font Awesome -->
+    {{!-- Font Awesome --}}
     <script defer src="https://kit.fontawesome.com/5de7cb8201.js" crossorigin="anonymous"></script>
 
-    <!-- Js de Bootstrap -->
+    {{!-- Js de Bootstrap --}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+
     {{{ body }}}
 
 </body>
