--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,10 @@
-<header class="py-3">
-    <h1>Books and Authors</h1>
+<header class="container py-3">
+    <h1 class="text-center">Books and Authors</h1>
 </header>
 
-<main class="container">
-    <h3 id="" class="text-center">subtitulo</h3>
+<main>
+    <h3>Agregar libro</h3>
+    {{!-- Formulario --}}
 </main>
 
 
